refactor: correct formatting and improves smells -#425